--- a/NextUMEAN/package.json
+++ b/NextUMEAN/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "socket.io": "^1.4.8",
     "swig": "^1.4.2"
   }
 }
